@@ -1,4 +1,3 @@
-CONSOLE MESSAGE: line 19: TypeError: Result of expression 'document.getElementById("console")' [null] is not an object.
 Test 1 - This is a H1 heading.
 
 Test 2 - This is a simple paragraph.
@@ -27,6 +26,9 @@ This test exercises the webkitConvertPointFromNodeToPage() function
 
 On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
 
+PASS successfullyParsed is true
+
+TEST COMPLETE
 Test parameter passing - should not crash
 PASS Missing parameter test
 Test did not crash and therefore was successful
